      by ComponentSpec. (CNY-1107)

Changes in 1.0.39:
  o Client Changes:
    * A signature callback has been added, which allows one to catch
      the troves with bad signatures and react appropriately (display
      an error message, lower trust level, etc). (CNY-1008)
    * The conary.lib.logparse module has been added to provide
      parsed access to conary log files. (CNY-1075)

  o Build Changes:
    * A "commitRelativeChangeset" configuration variable has been
      added to control whether Conary creates relative or absolute
      changesets when cooking.  It defaults to True, but can be
      changed to False to cause Conary to cook and commit absolute
      changesets. (CNY-912)
    * A list of X.org mirrors has been added to the default mirrors.
    * "cvc diff" now returns an return code of 2 on error, 1 if there
      are differences, and 0 if there are no differences. (CNY-938)
    * An "addResolveSource" method has been added to GroupRecipe.
      This will change how dependency resolution is done when building
      a group.  Instead of searching the label path defined in the
      group for solutions, the resolve source will be searched
      instead. This allows you to resolve dependencies against a
      particular version of a group. (CNY-1061)
    * Cloning multiple flavors of the same package in a single step is
      now possible. (CNY-1080)
    * Perl dependencies now include provides for .ph files, as well as
      .pl and .pm files, found in the perl @INC path. (CNY-1083)

  o Bug Fixes
    * The previous fix for CNY-699 introduced two errors in handling
      shared library dependencies that were not in shared library
      paths and thus need to have their paths encoded.  These bugs
      have been resolved. (CNY-1088)
    * The build time in the troveInfo page of the repository browser
      is now displayed properly as "(unknown)" if a trove has no build
      time set. (CNY-990)